// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeStuff doesn't show the escrow when the releaseTxId and the escrow are not set 1`] = `
<View>
  <TradeStuffSeparator />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <ChatButton />
  </View>
</View>
`;

exports[`TradeStuff renders correctly 1`] = `
<View>
  <TradeStuffSeparator />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <Escrow />
    <ChatButton />
  </View>
</View>
`;

exports[`TradeStuff renders correctly when the paymentmethod includes cash 1`] = `
<View>
  <TradeStuffSeparator />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <Escrow />
    <ChatButton />
  </View>
</View>
`;
